samples/_failures_safe/1761043225_e20191_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d2868ee.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_0d2868ee.c:170:9: error: expected declaration or statement at end of input
  170 |         case TOKEN_OPERATOR:
      |         ^~~~
./samples/SAFE/__tmp_0d2868ee.c:170:9: error: expected declaration or statement at end of input
